--- a/日志/2020/1019-1025.md
+++ b/日志/2020/1019-1025.md
@@ -17,4 +17,29 @@ Changes:
 - Real Content Hash
 - Named Chunk IDs
 - Module Federation: allows multiple webpack builds to work together.
-- 
+- JSON modules
+- import.meta
+- Asset modules
+- Nested tree-shaking
+- Inner-module tree-shaking
+- CommonJs Tree Shaking
+
+---
+
+**[nodejs是如何和libuv以及v8一起合作的？](https://juejin.im/post/6844903998651121677)**
+NodeJS依赖的包
+- http_parser：HTTP解析器，是一款由C语言写的轻量级解析器。因为该解析器设计成不进行任何系统调用或分配，因此每个请求占用的内存非常小。
+- c-ares：对于一些异步DNS解析，nodejs使用了该C库。在js层面上暴露出去的便是DNS模块中的resolve()族函数
+- OpenSSL：OpenSSL在tls和密码模块中都得到了广泛的应用。它提供了经过严密测试的许多加密功能的实现，现代web依赖这些功能来实现安全性。
+- zlib：为了实现快速得压缩和解压缩，Node.js依赖于工业标准的zlib库，也因其在gzip和libpng中的使用而闻名。Nodejs用zlib来创建同步的、或异步或流式的压缩和解压缩接口。
+- npm
+- acorn：一款体积小但效率高的javascript解析器
+- acorn-plugins：acorn使用的一些插件，从名称上来看，该版本的Nodejs支持bigInt特性、支持private类和方法特性等等
+- brotli: 提供C语言版本的Brotli压缩算法实现。
+- histogram: C语言版本实现高动态范围的柱状图
+- icu: ICU(International Components for Unicode)是一套成熟并广泛使用的C/C++和Java库集合，为软件应用提供Unicode和Globalization的支持
+- llhttp: 更加高性能可维护性更好的http解析器。
+- nghttp2: HTTP/2协议的C语言实现，头部压缩算法使用了HPACK
+- node-inspect: 该库尝试在新的V8版本下提供node debug命令。
+- uv: Nodejs的一大精髓之一，提供Nodejs访问操作系统各种特性的能力，包括文件系统、Socket等
+- v8: 将Js代码编译为底层机器码
