--- a/日志/2020/1123-1129.md
+++ b/日志/2020/1123-1129.md
@@ -38,3 +38,39 @@ microtask：更新应用程序状态的任务，包括promise回调，MutationOb
 
 **[Node.js 事件循环，定时器和 process.nextTick()](https://nodejs.org/zh-cn/docs/guides/event-loop-timers-and-nexttick/)**
 
+当 Node.js 启动后，它会初始化事件循环，处理已提供的输入脚本（或丢入 REPL，本文不涉及到），它可能会调用一些异步的 API、调度定时器，或者调用 process.nextTick()，然后开始处理事件循环。
+
+---
+
+**[深入理解NodeJS事件循环机制](https://juejin.cn/post/6844903999506923528)**
+
+Node.js 被分为了四层，分别是 应用层、V8引擎层、Node API层 和 LIBUV层
+应用层：即 JavaScript 交互层，常见的就是 Node.js 的模块，比如 http，fs
+V8引擎层：即利用 V8 引擎来解析JavaScript 语法，进而和下层 API 交互
+NodeAPI层：为上层模块提供系统调用，一般是由 C 语言来实现，和操作系统进行交互 。
+LIBUV层：是跨平台的底层封装，实现了 事件循环、文件操作等，是 Node.js 实现异步的核心 。
+
+```javascript
+// 事件循环本身相当于一个死循环，当代码开始执行的时候，事件循环就已经启动了
+// 然后顺序调用不同阶段的方法
+while(true){
+// timer阶段
+	timer()
+// I/O callbacks阶段
+	IO()
+// idle阶段
+	IDLE()
+// poll阶段
+	poll()
+// check阶段
+	check()
+// close阶段
+	close()
+}
+```
+1. timers 阶段: 这个阶段执行 setTimeout(callback) 和 setInterval(callback) 预定的 callback;
+2. I/O callbacks 阶段: 此阶段执行某些系统操作的回调，例如TCP错误的类型。 例如，如果TCP套接字在尝试连接时收到 ECONNREFUSED，则某些* nix系统希望等待报告错误。 这将操作将等待在==I/O回调阶段==执行;
+3. idle, prepare 阶段: 仅node内部使用;
+4. poll 阶段: 获取新的I/O事件, 例如操作读取文件等等，适当的条件下node将阻塞在这里;
+5. check 阶段: 执行 setImmediate() 设定的callbacks;
+6. close callbacks 阶段: 比如 socket.on(‘close’, callback) 的callback会在这个阶段执行;
