--- a/日志/2021/0222-0228.md
+++ b/日志/2021/0222-0228.md
@@ -2,3 +2,6 @@
 
 ---
 
+**[10 Examples of Machine Learning Mobile Apps – Guest Blog](https://blog.venturepact.com/10-examples-of-machine-learning-mobile-apps/)**
+
+---
