--- a/阅读笔记/Linux性能优化实践/22 | 答疑（三）：文件系统与磁盘的区别是什么？.md
+++ b/阅读笔记/Linux性能优化实践/22 | 答疑（三）：文件系统与磁盘的区别是什么？.md
@@ -2,3 +2,8 @@
 1. 基于 LRU（Least Recently Used）算法，回收缓存；
 2. 基于 Swap 机制，回收不常访问的匿名页；
 3. 基于 OOM（Out of Memory）机制，杀掉占用大量内存的进程。
+
+Buffer 用于磁盘，而 Cache 用于文件。
+
+磁盘是一个存储设备（确切地说是块设备），可以被划分为不同的磁盘分区。而在磁盘或者磁盘分区上，还可以再创建文件系统，并挂载到系统的某个目录中。这样，系统就可以通过这个挂载目录，来读写文件。换句话说，磁盘是存储数据的块设备，也是文件系统的载体。所以，文件系统确实还是要通过磁盘，来保证数据的持久化存储。
+
