--- a/日志/2021/0301-0307.md
+++ b/日志/2021/0301-0307.md
@@ -44,3 +44,11 @@
 ---
 
 **[端智能揭秘 | 促使双十一GMV大幅提升，手淘用了什么秘密武器？](https://www.jiqizhixin.com/articles/2019-11-22-4)**
+
+---
+
+**[Flutter 2.0](https://juejin.cn/post/6935621027116531720)**
+
+---
+
+**[React: Lottie 动画初体验和优化策略](https://juejin.cn/post/6918919172562878478)**
