--- a/日志/2021/0322-0328.md
+++ b/日志/2021/0322-0328.md
@@ -12,3 +12,43 @@ JS运行流程
 event loop, webworker
 ![](https://user-gold-cdn.xitu.io/2018/8/24/16569b86cc6d4415?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 ---
+
+**[如何画好一张架构图？](https://juejin.cn/post/6844904192394412040)**
+架构的本质：
+- 架构的本质是为了管理复杂性；
+- 架构的本质就是对系统进行有序化重构，不断减少系统的“熵”，使系统不断进化；
+- 架构的本质就是对系统进行有序化重构，以符合当前业务的发展，并可以快速扩展。
+
+架构的核心目的：管理复杂性，效率最大化。
+架构的两个主要变化来源：一个是以改善软件质量为目的的内在结构性变化；另外一个是以满足客户需求为目的的外在功能性变化。
+
+---
+
+**[一篇文章读懂分层架构](https://zhuanlan.zhihu.com/p/40353581)**
+
+---
+
+**[软件架构入门](https://ruanyifeng.com/blog/2016/09/software-architecture.html#:~:text=%E5%88%86%E5%B1%82%E6%9E%B6%E6%9E%84%EF%BC%88layered%20architecture,%E4%B9%8B%E9%97%B4%E9%80%9A%E8%BF%87%E6%8E%A5%E5%8F%A3%E9%80%9A%E4%BF%A1%E3%80%82)**
+
+1. 分层架构
+2. 事件驱动架构：事件驱动架构（event-driven architecture）就是通过事件进行通信的软件架构。
+   1. 事件队列（event queue）：接收事件的入口
+   2. 分发器（event mediator）：将不同的事件分发到不同的业务逻辑单元
+   3. 事件通道（event channel）：分发器与处理器之间的联系渠道
+   4. 事件处理器（event processor）：实现业务逻辑，处理完成后会发出事件，触发下一步操作
+3. 微核架构：微核架构（microkernel architecture）又称为"插件架构"（plug-in architecture），指的是软件的内核相对较小，主要功能和业务逻辑都通过插件实现。内核（core）通常只包含系统运行的最小功能。插件则是互相独立的，插件之间的通信，应该减少到最低，避免出现互相依赖的问题。
+4. 微服务架构：微服务架构（microservices architecture）是服务导向架构（service-oriented architecture，缩写 SOA）的升级。每一个服务就是一个独立的部署单元（separately deployed unit）。这些单元都是分布式的，互相解耦，通过远程通信协议（比如REST、SOAP）联系。
+5. 云架构：云结构（cloud architecture）主要解决扩展性和并发的问题，是最容易扩展的架构。这个模式主要分成两部分：
+   1. 处理单元：实现业务逻辑
+   2. 虚拟中间件：负责通信、保持sessions、数据复制、分布式处理、处理单元的部署。
+
+---
+
+**[什么是事件驱动架构？](https://www.redhat.com/zh/topics/integration/what-is-event-driven-architecture)**
+
+事件驱动架构可以基于发布/订阅模型或事件流模型。
+发布/订阅模型: 这是一种基于事件流订阅的消息传递基础架构。对于该模型而言，在事件发生或公布之后，系统会将相应的消息发送给需要通知的订阅用户。
+事件流模型: 借助事件流模型，事件将被写入日志。事件使用者无需订阅事件流。相反，它们可以从流的任何部分读取并随时加入流。 
+
+---
+
