--- a/日志/2021/0419-0425.md
+++ b/日志/2021/0419-0425.md
@@ -3,3 +3,14 @@
 --- 
 
 **[基于有限状态机与消息队列的三方支付系统补单实践](https://www.infoq.cn/article/QwceMJdJ07ysy6BQ0UGC?utm_source=related_read_bottom&utm_medium=article)**
+
+---
+
+**[How JavaScript works: memory management + how to handle 4 common memory leaks](https://blog.sessionstack.com/how-javascript-works-memory-management-how-to-handle-4-common-memory-leaks-3f28b94cfbec)**
+
+- Reference-counting garbage collection
+- Mark-and-sweep algorithm
+
+The four types of common JavaScript leaks
+1. Global variables
+2. Timers or callbacks that are forgotten
