--- a/日志/2021/0419-0425.md
+++ b/日志/2021/0419-0425.md
@@ -14,3 +14,7 @@
 The four types of common JavaScript leaks
 1. Global variables
 2. Timers or callbacks that are forgotten
+
+---
+
+**[How JavaScript works: an overview of the engine, the runtime, and the call stack](https://blog.sessionstack.com/how-does-javascript-actually-work-part-1-b0bacc073cf)**
