--- a/日志/2021/0419-0425.md
+++ b/日志/2021/0419-0425.md
@@ -14,3 +14,5 @@
 The four types of common JavaScript leaks
 1. Global variables
 2. Timers or callbacks that are forgotten
+3. Closures
+4. Out of DOM references
