--- a/日志/2021/0419-0425.md
+++ b/日志/2021/0419-0425.md
@@ -20,3 +20,7 @@ The four types of common JavaScript leaks
 ---
 
 **[How JavaScript works: an overview of the engine, the runtime, and the call stack](https://blog.sessionstack.com/how-does-javascript-actually-work-part-1-b0bacc073cf)**
+
+---
+
+**[How JavaScript works: inside the V8 engine + 5 tips on how to write optimized code](https://blog.sessionstack.com/how-javascript-works-inside-the-v8-engine-5-tips-on-how-to-write-optimized-code-ac089e62b12e)**
