--- a/日志/2021/0614-0620.md
+++ b/日志/2021/0614-0620.md
@@ -3,3 +3,74 @@
 ---
 
 **[可靠性，可扩展性，可维护性](https://vonng.gitbooks.io/ddia-cn/content/ch1.html)**
+
+---
+
+**[现代软件开发中，详细设计这一步要如何来做？](https://www.zhihu.com/question/300407894)**
+
+为什么需要设计？
+
+1. 一般上不需要设计，比如CRUD。或者一个简单的小功能，直接让开发人员干就好了
+2. 很复杂，很变化的才需要设计。设计是为了降低扩展成本和风险，是为了降低初级开发面对这些问题造成的系统复杂性。
+
+> 用单元测试代替设计文档，不仅可以节省纸张，节能环保，还能使你的软件质量得到更好的保证。作为现代程序员，应该充分利用电脑来自动化处理繁琐的重复低效劳动。而不是将传统行业的所谓经验奉为圭臬。
+
+---
+
+**[敏捷开发入门教程](http://www.ruanyifeng.com/blog/2019/03/agile-development.html)**
+
+> 敏捷开发的核心是迭代开发（iterative development）。敏捷一定是采用迭代开发的方式。迭代开发将一个大任务，分解成多次连续的开发，本质就是逐步改进。
+
+> 增量开发: 指的是软件的每个版本，都会新增一个用户可以感知的完整功能。也就是说，按照新增功能来划分迭代。增量开发加上迭代开发，才算真正的敏捷开发。
+
+- 敏捷开发的第一个好处，就是早期交付，从而大大降低成本。
+- 敏捷开发的第二个好处是，及时了解市场需求，降低产品不适用的风险。
+
+每次迭代都必须依次完成以下五个步骤:
+1. 需求分析（requirements analysis）
+2. 设计（design）
+3. 编码（coding）
+4. 测试（testing）
+5. 部署和评估（deployment / evaluation）
+
+敏捷开发的价值观:
+1. 程序员的主观能动性，以及程序员之间的互动，优于既定流程和工具。
+2. 软件能够运行，优于详尽的文档。
+3. 跟客户的密切协作，优于合同和谈判。
+4. 能够响应变化，优于遵循计划。
+
+---
+
+**[软件工程的最大难题](http://www.ruanyifeng.com/blog/2021/05/scaling-problem.html)**
+
+为什么大项目的开发效率低？
+1. 代码复杂度
+2. 团队原因：大团队保持扁平化管理，也会越来越困难，必须拆分成较小的群体。这时，对等的交流会被自上而下的交流所取代。团队成员会感觉，自己从平等的利益相关者，转变为普通的工作人员，工作动机受到了影响，责任感和主人翁意识都会淡漠。
+
+> 大项目的开发效率不高，把这个问题归咎于程序员的技术水平低和管理不善，都是没用的。 根本原因是软件规模的增长，必然使得代码和团队变得笨重。
+
+解决方法？
+- 代码解耦
+- 团队解耦
+
+---
+
+**[如何降低软件的复杂性？](http://www.ruanyifeng.com/blog/2018/09/complexity.html)**
+
+> "软件设计的最大目标，就是降低复杂性（complexity）"
+
+> 复杂性的来源主要有两个：代码的含义模糊和互相依赖。模糊指的是，代码里面的重要信息，看不出来。依赖指的是，某个模块的代码，不结合其他模块，就会无法理解。复杂性的危害在于，它会递增。你做错了一个决定，导致后面的代码都基于前面的错误实现，整个软件变得越来越复杂。"我们先把产品做出来，后面再改进"，这根本做不到。
+
+复杂性的隔离：
+- 如果能把复杂性隔离在一个模块，不与其他模块互动，就达到了消除复杂性的目的。
+- 改变软件设计的时候，修改的代码越少，软件的复杂性越低。
+- 复杂性尽量封装在模块里面，不要暴露出来。如果多个模块耦合，那就把这些模块合并成一个。
+
+接口和实现:
+- 模块分成接口和实现。接口要简单，实现可以复杂。
+- 好的 class 应该是"小接口，大功能"，糟糕的 class 是"大接口，小功能"。好的设计是，大量的功能隐藏在简单接口之下，对用户不可见，用户感觉不到这是一个复杂的 class。
+
+---
+
+**[为什么文件名要小写？](http://www.ruanyifeng.com/blog/2017/02/filename-should-be-lowercase.html)**
+
