--- a/日志/2021/0628-0704.md
+++ b/日志/2021/0628-0704.md
@@ -4,3 +4,9 @@
 
 ---
 
+**[观察者模式和发布订阅模式有什么不同？](https://www.zhihu.com/question/23486749)**
+> 发布订阅模式多了个事件通道
+
+> 很多人把观察者模式和订阅模式混淆一谈，其实订阅模式有一个调度中心，对订阅事件进行统一管理。而观察者模式可以随意注册事件，调用事件，虽然实现原理都雷同，设计模式上有一定的差别，实际代码运用中差别在于：订阅模式中，可以抽离出调度中心单独成一个文件，可以对一系列的订阅事件进行统一管理。这样和观察者模式中的事件漫天飞就有千差万别了，在开发大型项目的时候，订阅/发布模式会让业务更清晰！
+
+![](https://pic1.zhimg.com/80/v2-87ed5aaf77f78ac6ec834ddba089e577_1440w.jpg?source=1940ef5c)
