--- a/日志/2021/0913-0919.md
+++ b/日志/2021/0913-0919.md
@@ -24,3 +24,12 @@
 
 ---
 
+**[舒文：浅谈阿里前端的多样化](https://mp.weixin.qq.com/s?__biz=MzI5NjM5NDQxMg%3D%3D&idx=1&mid=2247488327&scene=21&sn=94909889a0786504b52cfe2b08adb884#wechat_redirect)**
+
+搭建，不止于提效
+当效率上达到一定临界点后（通常是边际效应开始递减），对应的技术方案都越界碰触到另一个领域。
+原本的面向效率、被高度抽象化的工具系统成为了一个解决具象业务的产品。
+
+---
+
+**[API 的一码多端方案 —— Uni API](https://mp.weixin.qq.com/s?__biz=Mzg4MjE5OTI4Mw==&mid=2247488795&idx=1&sn=4c82e57e8c3b436d1f94cd78005059fe&chksm=cf5b0a87f82c8391a6310cb887c97954ccd34496e559c479771601c5474de3e3ea407b603dbd&scene=132#wechat_redirect)**
