--- a/日志/2021/1129-1203.md
+++ b/日志/2021/1129-1203.md
@@ -3,3 +3,26 @@
 ---
 
 **[Fetch API 教程](https://www.ruanyifeng.com/blog/2020/12/fetch-tutorial.html)**
+
+---
+
+**[UML类图画法全程解析](https://www.cnblogs.com/duanxz/archive/2012/06/28/2568858.html)**
+
+UML类图符号简介
+1. 类（Class）：使用三层矩形框表示。
+   第一层显示类的名称，如果是抽象类，则就用斜体显示。
+   第二层是字段和属性。
+   第三层是类的方法。
+   注意前面的符号，‘+’表示public，‘-’表示private，‘#’表示protected。
+2. UML类图符号之接口：使用两层矩形框表示，与类图的区别主要是顶端有<<interface>>显示。
+   第一行是接口名称。
+   第二行是接口方法。
+3. UML类图符号之继承类（extends）：用空心三角形+实线来表示。
+4. UML类图符号之实现接口（implements）：用空心三角形+虚线来表示
+5. UML类图符号之关联（Association）：用实线箭头来表示，例如：燕子与气候
+6. UML类图符号之聚合（Aggregation）：用空心的菱形+实线箭头来表示
+   聚合：表示一种弱的‘拥有’关系，体现的是A对象可以包含B对象，但B对象不是A对象的一部分，例如：公司和员工
+   组合（Composition）：用实心的菱形+实线箭头来表示
+   组合：部分和整体的关系，并且生命周期是相同的。例如：人与手
+7. UML类图符号之依赖（Dependency）：用虚线箭头来表示，例如：动物与氧气
+8. UML类图符号之基数：连线两端的数字表明这一端的类可以有几个实例，比如：一个鸟应该有两只翅膀。如果一个类可能有无数个实例，则就用‘n’来表示。关联、聚合、组合是有基数的。
